chore: Refactor DTO field names and remove unused files